components/styles.module.scss
.content {
  background: #242424;
  color: #fff;
}

.customRow {
  margin: 0;
  justify-content: center;
}

.title {
  text-align: center;
  margin-bottom: 24px;
}

.customCol {
  display: flex !important;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.cardColumns {
  -webkit-column-count: 3;
  -moz-column-count: 3;
  column-count: 3;
  -webkit-column-gap: 1.25rem;
  -moz-column-gap: 1.25rem;
  column-gap: 1.25rem;
  orphans: 1;
  widows: 1;
}

.card {
  .cardTitle {
    font-size: 25px;
    margin-bottom: 0;
  }
  .cardSubtitle {
    font-size: 14px;
    opacity: 0.5;
    margin: 5px 0 10px;
    font-weight: 400;
  }
}

.timelineIcon {
  @media (min-width: 1170px) {
    width: 60px;
  }
  width: 40px;
  border-radius: 100%;
}

.flag {
  width: 20px;
  margin: 0 5px;
}

.customLink {
  color: #fff;

  &:hover {
    color: #fff;
  }
}

.footer {
  background-color: #373a3c;
  color: #fff;
}

